--- a/_posts/2015-01-29-my-emacs.md
+++ b/_posts/2015-01-29-my-emacs.md
@@ -7,8 +7,7 @@ tags: []
 ---
 {% include JB/setup %}
 
-
-```
+{% highlight emacs %}
 (require 'package)
 (package-initialize)
 (server-start)
@@ -113,4 +112,4 @@ tags: []
           (set-visited-file-name new-name)
           (set-buffer-modified-p nil))))))
 
-```
+{% endhighlight %}
